[package]
name = "tokenhub"
version = "0.1.0"
edition = "2021"
description = "Token pool proxy for LLM API endpoints"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-files = "0.6"
actix-cors = "0.7"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
futures-util = "0.3"
anyhow = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
actix-test = "0.1"
tempfile = "3"
